Mouse mode 9 (aka X10 xterm mouse protocol) differs from xterm
VTE uses the usual modifier encoding in mouse mode 9, while xterm does not thus there is an overlap of VTE's reported values with those xterm reports for extended mouse buttons.
This difference is visible since xterm 336 which allows clicks while keyboard modifiers are held, but i think it was in the sources longer.
Tested with vte 0.54.3.
alt-left click in xterm with modes 9 and 1006 reports:
ESC [<0;21;9M
while VTE reports
ESC [<8;21;9M
xterm reports for the left side button of my mouse (x11 button 8):
ESC [<8;21;9M