emulation: Do not encode keyboard modifiers in X10 mouse mode

https://gitlab.gnome.org/GNOME/vte/issues/93
(cherry picked from commit 473c4e712881252cc832e31ecf7f2d077f60f70f)